# AC_DataConcentrator

./: .gitignore  CMakeLists.txt  README.md  build.bat
data/network/: network.xml
src/: ac_dataconcentratorconfig.h.in  framework.cpp  framework.h  main.cpp  sensormodel.cpp
src/input/: sensorinput.cpp  sensorinput.h
src/output/: networkoutput.cpp  networkoutput.h
